--- a/akonadi/cachepolicypage.ui
+++ b/akonadi/cachepolicypage.ui
@@ -13,14 +13,14 @@
     <height>461</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_3">
    <item>
     <widget class="QCheckBox" name="inherit">
      <property name="text">
-      <string>Inherit cache policy from parent</string>
+      <string>Use options from parent folder or account</string>
      </property>
      <property name="checked">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="tristate">
       <bool>false</bool>
@@ -28,124 +28,153 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="enabled">
-      <bool>false</bool>
+    <widget class="QCheckBox" name="syncOnDemand">
+     <property name="text">
+      <string>Synchronize when selecting this folder</string>
      </property>
-     <property name="title">
-      <string>Cache Policy</string>
-     </property>
-     <layout class="QGridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Interval check time:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="KIntNumInput" name="checkInterval">
-        <property name="value">
-         <number>0</number>
-        </property>
-        <property name="minimum">
-         <number>0</number>
-        </property>
-        <property name="suffix">
-         <string>minutes</string>
-        </property>
-        <property name="specialValueText">
-         <string comment="never check the cache">Never</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Local cache timeout:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="KIntNumInput" name="localCacheTimeout">
-        <property name="value">
-         <number>0</number>
-        </property>
-        <property name="minimum">
-         <number>0</number>
-        </property>
-        <property name="suffix">
-         <string>minutes</string>
-        </property>
-        <property name="specialValueText">
-         <string comment="no cache timeout">Never</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" colspan="2">
-       <widget class="QCheckBox" name="syncOnDemand">
-        <property name="text">
-         <string>Synchronize on demand</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="title">
-      <string>Locally Cached Parts</string>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Automatically synchronize after:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="KIntNumInput" name="checkInterval" native="true">
+       <property name="value" stdset="0">
+        <number>-1</number>
+       </property>
+       <property name="minimum" stdset="0">
+        <number>0</number>
+       </property>
+       <property name="suffix" stdset="0">
+        <string>minutes</string>
+       </property>
+       <property name="specialValueText" stdset="0">
+        <string comment="never check the cache">Never</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QStackedWidget" name="stackedWidget">
+     <property name="currentIndex">
+      <number>1</number>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="KEditListWidget" name="localParts">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="buttons">
-         <set>KEditListWidget::Add|KEditListWidget::Remove</set>
-        </property>
-        <property name="title" stdset="0">
-         <string>Locally Cached Parts</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QWidget" name="rawPage">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="KEditListBox" name="localParts">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="title">
+          <string>Locally Cached Parts</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="endUserPage">
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="margin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QGroupBox" name="retrievalOptionsGroupBox">
+         <property name="title">
+          <string>Retrieval Options</string>
+         </property>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QRadioButton" name="retrieveFullMessages">
+            <property name="text">
+             <string>Always retrieve full messages</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QRadioButton" name="retrieveOnlyHeaders">
+            <property name="text">
+             <string>Retrieve message bodies on demand</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <widget class="QLabel" name="label">
+              <property name="text">
+               <string>Keep message bodies locally for:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="KIntNumInput" name="localCacheTimeout" native="true">
+              <property name="value" stdset="0">
+               <number>-1</number>
+              </property>
+              <property name="minimum" stdset="0">
+               <number>0</number>
+              </property>
+              <property name="suffix" stdset="0">
+               <string>minutes</string>
+              </property>
+              <property name="specialValueText" stdset="0">
+               <string comment="no cache timeout">Never</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <customwidgets>
   <customwidget>
+   <class>KEditListBox</class>
+   <extends>QGroupBox</extends>
+   <header>keditlistbox.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
    <class>KIntNumInput</class>
    <extends>QWidget</extends>
    <header>knuminput.h</header>
   </customwidget>
-  <customwidget>
-   <class>KEditListWidget</class>
-   <extends>QWidget</extends>
-   <header>keditlistwidget.h</header>
-  </customwidget>
  </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>inherit</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>groupBox</receiver>
-   <slot>setDisabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>65</x>
-     <y>20</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>71</x>
-     <y>39</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>inherit</sender>
    <signal>toggled(bool)</signal>
@@ -159,6 +188,102 @@
     <hint type="destinationlabel">
      <x>321</x>
      <y>192</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>retrieveOnlyHeaders</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>299</x>
+     <y>143</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>162</x>
+     <y>168</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>retrieveOnlyHeaders</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>localCacheTimeout</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>299</x>
+     <y>143</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>439</x>
+     <y>168</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>inherit</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>syncOnDemand</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>304</x>
+     <y>18</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>304</x>
+     <y>39</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>inherit</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>label_2</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>304</x>
+     <y>18</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>154</x>
+     <y>64</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>inherit</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>checkInterval</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>304</x>
+     <y>18</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>446</x>
+     <y>64</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>inherit</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>retrievalOptionsGroupBox</receiver>
+   <slot>setDisabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>304</x>
+     <y>18</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>266</y>
     </hint>
    </hints>
   </connection>
